Updated test for LINE_NUMBER